--- a/src/main.scss
+++ b/src/main.scss
@@ -19,4 +19,15 @@ $border: 3px solid $black;
 body {
     background: pink;
     font-family: $main-font;
+    color: $black;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+    border-bottom: 1px dashed $black;
+
+    &:hover {
+        border-bottom: 1px solid $black;
+    }
 }
