--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -24,12 +24,32 @@
     color: $gray;
 }
 
-.title {
-    font-family: 'Whisper';
-    color: $white;
-    font-size: 7rem;
-    -webkit-text-stroke: 3px $black;
+header {
     margin-bottom: 1rem;
+    display: flex;
+    flex-flow: row wrap;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.title {
+    color: $black;
+    font-size: 7rem;
+    font-family: $whisper-font;
+    margin-bottom: 1rem;
+}
+
+.title-evil {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.subtitle {
+    text-align: left;
+    margin-top: -10px;
 }
 
 button {
@@ -85,7 +105,7 @@ textarea {
     align-items: center;
 }
 
-.text-field, .image-upload-label, .image-canvas-wrapper {
+.text-field, .image-upload-label, .image-output-wrapper {
     width: min(35rem, 95vw);
 }
 
@@ -111,7 +131,7 @@ textarea {
     border-radius: 1rem;
 }
 
-.image-canvas-wrapper {
+.image-output-wrapper {
     background: $white;
     border: $border;
     padding: 0;
@@ -120,4 +140,47 @@ textarea {
         margin: 0;
         display: block;
     }
+}
+
+.image-upload-wrapper {
+    margin-bottom: 2rem;
+}
+
+.image-output {
+    position: relative;
+    overflow: hidden;
+}
+
+.image-text, .image-text-evil {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 3;
+    
+    font-family: 'Whisper';
+    color: $white;
+    font-size: 4rem;
+
+    @media (max-width: 500px) {
+        font-size: 3rem;
+    }
+
+    @media (max-width: 350px) {
+        font-size: 2.5rem;
+    }
+}
+
+.image-text-evil {
+    color: $black;
+    z-index: 2;
+}
+
+.image-image {
+    z-index: 1;
 }
