Fix font location

--- a/src/main.scss
+++ b/src/main.scss
@@ -13,7 +13,7 @@ $border: 3px solid $black;
 
 @font-face {
     font-family: 'Whisper';
-    src: url(./fonts/Upright.otf) format('opentype');
+    src: url(/Upright.otf) format('opentype');
 }
 
 body {
