Fix button text color

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -73,6 +73,7 @@ header {
 button {
     border: $border;
     font-family: inherit;
+    color: $black;
     background: $white;
     padding: 1rem;
     font-size: 1.5rem;
