Support multi line text

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -190,6 +190,7 @@ textarea {
     align-items: center;
     justify-content: center;
     z-index: 3;
+    white-space: pre-line;
     
     font-family: 'Whisper';
     color: $white;
