--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -56,7 +56,7 @@ textarea {
     font-size: 1.5rem;
     font-weight: bold;
     font-family: inherit;
-    height: 8rem;
+    min-height: 8rem;
     border-radius: 0;
 }
 
@@ -65,9 +65,10 @@ textarea {
     flex-flow: column wrap;
     align-items: center;
     gap: 1rem;
+    margin-bottom: 2rem;
 }
 
-.text-field-label {
+.field-label {
     font-weight: bold;
     font-size: 1.5rem;
     background: $white;
@@ -80,7 +81,7 @@ textarea {
     }
 }
 
-.text-field-wrapper, .image-field-wrapper {
+.field-wrapper {
     display: flex;
     flex-flow: column wrap;
     align-items: flex-start;
@@ -92,12 +93,8 @@ textarea {
     align-items: center;
 }
 
-.text-field, .image-upload-label, .image-output-wrapper {
+.full-width-box {
     width: min(35rem, 100vw - 1rem);
-}
-
-.image-field-wrapper {
-    margin-bottom: 2rem;
 }
 
 .change-image-button {
