--- a/src/styles/ImageOutput.scss
+++ b/src/styles/ImageOutput.scss
@@ -11,6 +11,15 @@
     left: 1rem;
     width: calc(100% - 2rem);
     height: calc(100% - 2rem);
+    font-size: 4rem;
+
+    @media (max-width: 500px) {
+        font-size: 3rem;
+    }
+
+    @media (max-width: 350px) {
+        font-size: 2.5rem;
+    }
 }
 
 .image-text, .image-text-evil {
@@ -28,15 +37,6 @@
 
     font-family: 'Whisper';
     color: $white;
-    font-size: 4rem;
-
-    @media (max-width: 500px) {
-        font-size: 3rem;
-    }
-
-    @media (max-width: 350px) {
-        font-size: 2.5rem;
-    }
 }
 
 .image-text-evil {
@@ -59,4 +59,25 @@
         margin: 0;
         display: block;
     }
+}
+
+.settings-wrapper {
+    border-top: $border;
+    background: $white;
+    padding: 1rem;
+    font-weight: bold;
+    font-size: 1.25rem;
+    text-align: left;
+    display: flex;
+    flex-flow: column wrap;
+    gap: 0.5rem;
+}
+
+.settings-item {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: flex-end;
+    column-gap: 1rem;
+    row-gap: 0.5rem;
 }
