Add text alignment dropdown

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -60,7 +60,7 @@ textarea {
     border-radius: 0;
 }
 
-.settings-section {
+.input-section {
     display: flex;
     flex-flow: column wrap;
     align-items: center;
