--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,9 @@
-@import '../main.scss';
+@import "../main.scss";
 
-#root, .app-wrapper, html, body {
+#root,
+.app-wrapper,
+html,
+body {
     height: 100%;
 }
 
@@ -25,11 +28,13 @@
     opacity: 1;
 }
 
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
+:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
     color: $gray;
 }
-  
-::-ms-input-placeholder { /* Microsoft Edge */
+
+::-ms-input-placeholder {
+    /* Microsoft Edge */
     color: $gray;
 }
 
@@ -105,4 +110,26 @@ textarea {
 
     font-size: 1rem;
     padding: 0.5rem;
+}
+
+.callout {
+    padding: 0.5rem 1rem;
+    background: $white;
+    border: $border;
+    position: relative;
+    margin-bottom: 1rem;
+    display: inline-block;
+    font-weight: bold;
+    align-self: center;
+    max-width: calc(100vw - 1rem);
+
+    a {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        text-decoration: none !important;
+        border: none !important;
+    }
 }
