Add crossword calendar callout

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -117,7 +117,7 @@ textarea {
     background: $white;
     border: $border;
     position: relative;
-    margin-bottom: 1rem;
+    margin-top: 1rem;
     display: inline-block;
     font-weight: bold;
     align-self: center;
