--- a/src/styles/ImageModal.scss
+++ b/src/styles/ImageModal.scss
@@ -1,4 +1,4 @@
-@import '../main.scss';
+@import "../main.scss";
 
 .image-modal-wrapper {
     position: fixed;
@@ -48,6 +48,13 @@
     justify-content: flex-start;
     padding: 1rem;
     font-size: 1.5rem;
+}
+
+.image-modal-footer {
+    font-weight: bold;
+    padding: 1rem;
+    text-align: left;
+    border-top: $border;
 }
 
 .image-modal-close-button {
