--- a/src/styles/ImageModal.scss
+++ b/src/styles/ImageModal.scss
@@ -57,28 +57,6 @@
     font-size: 1.5rem;
 }
 
-.image-modal-footer {
-    font-weight: bold;
-    padding: 1rem;
-    text-align: left;
-}
-
-.image-modal-download-button {
-    background: $white;
-    border: $border;
-    height: 3rem;
-    line-height: 2.5rem;
-    padding: 0 1rem;
-    margin-right: 1rem;
-    font-size: 1.5rem;
-    text-decoration: none !important;
-
-    &:hover {
-        text-decoration: none !important;
-        border-bottom: $border;
-    }
-}
-
 .image-modal-close-button {
     border: $border;
     padding: 0;
@@ -90,4 +68,38 @@
     justify-content: center;
     font-size: 3rem;
     padding-bottom: 0.2em;
+}
+
+.image-modal-footer {
+    font-weight: bold;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.image-modal-download-button {
+    background: $white;
+    border: $border;
+    padding: 0.5rem 1rem;
+    display: inline-block;
+    margin-right: 1rem;
+    font-size: 1.5rem;
+    text-decoration: none !important;
+
+    &:hover {
+        text-decoration: none !important;
+        border-bottom: $border;
+    }
+}
+
+.image-modal-download-button-wrapper {
+    flex: 1;
+    text-align: left;
+}
+
+.feedback-survey {
+    font-size: 0.8rem;
+    flex: 1;
+    text-align: right;
 }
