--- a/src/styles/ImageOutput.scss
+++ b/src/styles/ImageOutput.scss
@@ -1,4 +1,4 @@
-@import '../main.scss';
+@import "../main.scss";
 
 .image-output {
     position: relative;
@@ -12,6 +12,8 @@
     width: calc(100% - 2rem);
     height: calc(100% - 2rem);
     font-size: 4rem;
+    cursor: move;
+    touch-action: none;
 
     @media (max-width: 500px) {
         font-size: 3rem;
@@ -22,21 +24,23 @@
     }
 }
 
-.image-text, .image-text-evil {
+.image-text,
+.image-text-evil {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    
+
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 3;
     white-space: pre-line;
 
-    font-family: 'Whisper';
+    font-family: "Whisper";
     color: $white;
+    pointer-events: none;
 }
 
 .image-text-evil {
@@ -84,4 +88,8 @@
 
 .settings-item-input {
     margin-bottom: -0.3em;
+}
+
+.settings-note {
+    font-size: 0.8rem;
 }
