Preserve whitespace in image text

--- a/src/styles/ImageOutput.scss
+++ b/src/styles/ImageOutput.scss
@@ -36,7 +36,7 @@
     align-items: center;
     justify-content: center;
     z-index: 3;
-    white-space: pre-line;
+    white-space: pre-wrap;
 
     font-family: "Whisper";
     color: $white;
